# aws_inventory

./: .gitignore  README.md  aws_inventory.py  pyproject.toml
